--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         ]
     },
     "require": {
-        "php": "8.2.*"
+        "php": "8.2.*",
+        "ext-gmp": "*"
     },
     "minimum-stability": "dev"
 }
